--- a/package.json
+++ b/package.json
@@ -3,23 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/code-frame": "^7.14.5",
-    "@testing-library/react-hooks": "^7.0.1",
-    "axios": "^0.21.1",
-    "babel": "^6.23.0",
-    "classnames": "^2.3.1",
-    "cors": "^2.8.5",
-    "jquery": "^3.6.0",
-    "jsonwebtoken": "^8.5.1",
-    "node": "^16.6.1",
-    "normalize.css": "^8.0.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-hooks-testing-library": "^0.6.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.0",
-    "react-test-renderer": "^17.0.2",
-    "sass": "^1.37.5"
+    "@babel/code-frame": "7.14.5",
+    "@testing-library/react-hooks": "7.0.1",
+    "axios": "0.21.1",
+    "babel": "6.23.0",
+    "classnames": "2.3.1",
+    "cors": "2.8.5",
+    "jquery": "3.6.0",
+    "jsonwebtoken": "8.5.1",
+    "node": "16.6.1",
+    "normalize.css": "8.0.1",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-hooks-testing-library": "0.6.0",
+    "react-router-dom": "5.2.0",
+    "react-scripts": "4.0.0",
+    "react-test-renderer": "17.0.2",
+    "sass": "1.37.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,16 +43,16 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@storybook/addon-essentials": "^6.3.6",
-    "@storybook/addon-links": "^6.3.6",
-    "@storybook/addons": "^6.3.6",
-    "@storybook/node-logger": "^6.3.6",
-    "@storybook/preset-create-react-app": "^3.2.0",
-    "@storybook/react": "^6.3.6",
-    "@testing-library/jest-dom": "^4.0.0",
-    "@testing-library/react": "^12.0.0",
-    "node-sass": "^4.14.0"
+    "@babel/core": "7.4.3",
+    "@storybook/addon-essentials": "6.3.6",
+    "@storybook/addon-links": "6.3.6",
+    "@storybook/addons": "6.3.6",
+    "@storybook/node-logger": "6.3.6",
+    "@storybook/preset-create-react-app": "3.2.0",
+    "@storybook/react": "6.3.6",
+    "@testing-library/jest-dom": "4.0.0",
+    "@testing-library/react": "12.0.0",
+    "node-sass": "4.14.0"
   },
   "jest": {
     "watchPathIgnorePatterns": [
