--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
     "@storybook/addon-essentials": "6.3.6",
     "@storybook/addon-links": "6.3.6",
     "@storybook/addons": "6.3.6",
