--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node": "16.6.1",
     "normalize.css": "8.0.1",
     "react": "16.9.0",
+    "react-datepicker": "^4.2.1",
     "react-dom": "16.9.0",
     "react-hooks-testing-library": "0.6.0",
     "react-router-dom": "5.2.0",
