--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "@babel/code-frame": "7.14.5",
-    "@testing-library/react-hooks": "7.0.1",
     "babel": "6.23.0",
     "classnames": "2.3.1",
     "cors": "2.8.5",
@@ -15,19 +14,16 @@
     "react": "16.9.0",
     "react-datepicker": "^4.2.1",
     "react-dom": "16.9.0",
-    "react-hooks-testing-library": "0.6.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.0",
-    "react-test-renderer": "17.0.2",
     "sass": "1.37.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --verbose",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "eject": "react-scripts eject"
+   
   },
   "proxy": "http://localhost:8002",
   "browserslist": {
@@ -43,16 +39,13 @@
     ]
   },
   "devDependencies": {
+    "react-test-renderer": "17.0.2",
+    "@testing-library/react-hooks": "7.0.1",
+    "react-hooks-testing-library": "0.6.0",
     "@babel/core": "7.4.3",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.15",
-    "@storybook/addon-essentials": "6.3.6",
-    "@storybook/addon-links": "6.3.6",
-    "@storybook/addons": "6.3.6",
-    "@storybook/node-logger": "6.3.6",
-    "@storybook/preset-create-react-app": "3.2.0",
-    "@storybook/react": "6.3.6",
+    "@fortawesome/fontawesome-svg-core": "1.2.36",
+    "@fortawesome/free-solid-svg-icons": "5.15.4",
+    "@fortawesome/react-fontawesome": "0.1.15",
     "@testing-library/jest-dom": "4.0.0",
     "@testing-library/react": "12.0.0",
     "node-sass": "4.14.0"
