--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 # .env.development.local
 # .env.test.local
 # .env.production.local
+yarn.lock
 
 # Notes specific to running react and storybooks on Matt's system
 MBNotes.md
